<resources>
    <string name="app_name">LeadCaptureIntegrado</string>
    <string name="title_activity_cadastro_cidade">Cadastrar Cidade</string>
    <string name="title_activity_main">Lead</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nomeCidade">Cidade</string>
    <string name="siglaEstado">UF</string>
    <string name="cadastraCidade">Cadastrar Cidade</string>
    <string name="cadastraCurso">Cadastrar Curso</string>
    <string name="nomeCurso">Nome do Curso</string>
    <string name="aberto">Aberto</string>
    <string name="menu1">Trocar Evento</string>
    <string name="menu2">Cadastrar Evento</string>
    <string name="menu3">Sair</string>
    <string name="nomeEvento">Nome do Evento</string>
    <string name="cadastraEvento">Cadastrar Evento</string>
    <string name="trocarEvento">Listar Eventos</string>
    <string name="listarCidades">Listar Cidades</string>
    <string name="listarCursos">Listar Cursos</string>
    <string name="listarLeads">Listar Leads</string>
    <string name="sair">Sair</string>
    <string name="dataEvento">Data do Evento</string>
    <string name="nomePessoa">Nome do Futuro Aluno</string>
    <string name="emailLead">email@example.com</string>
    <string name="nomeLead">Nome do futuro aluno</string>
    <string name="foneResLead">Telefone Residencial</string>
    <string name="foneCelLead">Telefone Celular</string>
    <string name="dataLead">Nascimento</string>
    <string name="informacoesPessoais">Informações Pessoais</string>
    <string name="enderecoLead">Endereço</string>
    <string name="bairroLead">Bairro</string>
    <string name="nLead">Nº</string>
    <string name="informacoesEndereco">Endereço</string>
    <string name="fiesQuestion">Fies ?</string>
    <string name="prouni">Prouni ?</string>
    <string name="enem">Enem ?</string>
    <string name="cadastroSucesso">Cadastro Efetuado com Sucesso!</string>
    <string name="cadastroErro">Registro Não Inserido!</string>
    <string name="faltaCampos">Preencha todos os campos!</string>
    <string name="adiciona">adiciona</string>
    <string name="title_activity_seleciona_curso">Selecione o Evento Para Capturarmos as Leads!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="evento_escolhido">0</string>
    <string name="selecione_evento">Selecione um evento para começar a captura de Leads!</string>
    <string name="evento_selecionado">Evento Selecionado!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_n">Usuário</string>
    <string name="senha_n">Senha</string>
    <string name="logar">Logar</string>
    <string name="erro_logar">Falha no login!</string>
    <string name="title_activity_lista_cidades">ListaCidades</string>
    <string name="seleciona_cidade">Selecione a Cidade</string>
    <string name="erro_exclusao">Registro não excluído!</string>
    <string name="exclusao">Registro Excluído!</string>
    <string name="title_activity_lista_cursos">ListaCursos</string>
    <string name="seleciona_curso">Selecione o Curso</string>
    <string name="title_activity_lista_leads">ListaLeads</string>
    <string name="seleciona_leads">Selecione a Lead</string>
    <string name="erro_email">Insira um Email Válido!</string>
    <string-array name="estados">
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
<item>GO</item>
<item>MA</item>
<item>MT</item>
        <item>MS</item>
<item>MG</item>
<item>PA</item>
<item>PB</item>
<item>PR</item>
<item>PE</item>
<item>PI</item><item>RJ</item>
<item>RN</item>
<item>RS</item>
<item>RO</item>
<item>RR</item>
<item>SC</item>
<item>SP</item>
<item>SE</item>
<item>TO</item>
    </string-array>
    

</resources>
