<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.dorga.mantuan.leadcaptureintegrado.CadastroLeadFragment">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="right|bottom"
        >

        <TextView
            android:textColor="@color/azul_claro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/informacoesPessoais"
            android:id="@+id/textView5"
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:drawableLeft="@mipmap/ic_action_person"
            android:drawableStart="@mipmap/ic_action_person"
            android:hint="@string/nomeLead"
            android:ems="10"
            android:maxLength="50"
            android:id="@+id/etNomeLead"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/textView5"
            android:layout_alignLeft="@+id/textView5"
            android:layout_alignStart="@+id/textView5"
            android:layout_alignRight="@+id/textView5"
            android:layout_alignEnd="@+id/textView5"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/emailLead"
            android:id="@+id/etEmailLead"
            android:layout_below="@+id/etNomeLead"
            android:layout_alignLeft="@+id/etNomeLead"
            android:layout_alignStart="@+id/etNomeLead"
            android:layout_alignRight="@+id/etNomeLead"
            android:drawableStart="@mipmap/ic_action_email"
            android:drawableLeft="@mipmap/ic_action_email"
            android:layout_alignEnd="@+id/etNomeLead" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:drawableStart="@mipmap/ic_action_call"
            android:drawableLeft="@mipmap/ic_action_call"
            android:id="@+id/etFoneRes"
            android:layout_below="@+id/etEmailLead"
            android:layout_alignRight="@+id/etEmailLead"
            android:layout_alignEnd="@+id/etEmailLead"
            android:layout_alignLeft="@+id/etEmailLead" />

        <EditText
            android:drawableStart="@mipmap/ic_action_phone"
            android:drawableLeft="@mipmap/ic_action_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/etFoneCel"
            android:layout_below="@+id/etFoneRes"
            android:layout_alignStart="@+id/etFoneRes"
            android:layout_toRightOf="@+id/etFoneRes"
            android:layout_alignRight="@+id/etFoneRes"
            android:layout_alignLeft="@+id/etFoneRes"
            android:layout_alignEnd="@+id/etFoneRes" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:drawableStart="@mipmap/ic_action_go_to_today"
            android:drawableLeft="@mipmap/ic_action_go_to_today"
            android:id="@+id/dataNascimento"
            android:layout_below="@+id/etFoneCel"
            android:layout_alignLeft="@+id/etFoneCel"
            android:layout_alignStart="@+id/etFoneCel"
            android:layout_alignRight="@+id/etFoneCel"
            android:layout_alignEnd="@+id/etFoneCel" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbarStyle="outsideInset"
            android:id="@+id/spCidade"
            android:layout_below="@+id/dataNascimento"
            android:layout_alignRight="@+id/dataNascimento"
            android:layout_alignEnd="@+id/dataNascimento"
            android:layout_alignLeft="@+id/dataNascimento"
            android:layout_alignStart="@+id/dataNascimento"
            android:spinnerMode="dialog" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage"
            android:hint="@string/enderecoLead"
            android:ems="10"
            android:id="@+id/etEndereco"
            android:layout_below="@+id/spCidade"
            android:layout_alignLeft="@+id/etFoneCel"
            android:layout_alignStart="@+id/etFoneCel"
            android:layout_alignRight="@+id/etFoneCel"
            android:layout_alignEnd="@+id/etFoneCel" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage"
            android:hint="@string/nLead"
            android:id="@+id/etNumero"
            android:layout_below="@+id/etEndereco"
            android:layout_alignLeft="@+id/etEndereco"
            android:layout_alignStart="@+id/etEndereco"
            android:layout_toStartOf="@+id/etBairro" />


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/bairroLead"
            android:ems="10"
            android:id="@+id/etBairro"
            android:layout_below="@+id/etEndereco"
            android:layout_alignRight="@+id/etEndereco"
            android:layout_alignEnd="@+id/etEndereco" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fiesQuestion"
            android:id="@+id/cbFies"
            android:layout_below="@+id/cbProuni"
            android:layout_alignLeft="@+id/cbProuni"
            android:layout_alignStart="@+id/cbProuni" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prouni"
            android:id="@+id/cbProuni"
            android:checked="false"
            android:layout_alignBottom="@+id/etProuniP"
            android:layout_alignLeft="@+id/etNumero"
            android:layout_alignStart="@+id/etNumero" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:visibility="invisible"
            android:id="@+id/etProuniP"
            android:layout_below="@+id/etBairro"
            android:layout_toRightOf="@+id/cbProuni"
            android:layout_alignRight="@+id/etEndereco"
            android:layout_alignEnd="@+id/etEndereco" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enem"
            android:id="@+id/checkBox"
            android:layout_below="@+id/cbFies"
            android:layout_alignLeft="@+id/cbProuni"
            android:layout_alignStart="@+id/cbProuni" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:visibility="invisible"
            android:id="@+id/edEnem"
            android:layout_below="@+id/etProuniP"
            android:layout_toRightOf="@+id/checkBox"
            android:layout_alignRight="@+id/etProuniP"
            android:layout_alignEnd="@+id/etProuniP" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spCurso1"
            android:layout_below="@+id/checkBox"
            android:layout_alignRight="@+id/edEnem"
            android:layout_alignEnd="@+id/edEnem"
            android:layout_alignLeft="@+id/checkBox"
            android:layout_alignStart="@+id/checkBox" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spCurso2"
            android:layout_alignBottom="@+id/spCurso1"
            android:layout_alignRight="@+id/spCurso1"
            android:layout_alignEnd="@+id/spCurso1"
            android:layout_alignLeft="@+id/spCurso1"
            android:layout_alignStart="@+id/spCurso1" />


    </RelativeLayout>
</FrameLayout>
    </ScrollView>


