<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/AppTheme"
    android:background="@drawable/bg_style"
    tools:context="br.dorga.mantuan.leadcaptureintegrado.LoginActivity_">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_n"
        android:textColor="@color/branco"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="115dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:textColor="@color/cinzinha"
        android:textAlignment="center"
        android:id="@+id/login"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senha_n"
        android:textColor="@color/branco"
        android:id="@+id/textView4"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:textColor="@color/cinzinha"
        android:textAlignment="center"
        android:id="@+id/senha"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logar"
        android:textColor="@color/branco"
        android:id="@+id/btnLogar"
        android:layout_below="@+id/senha"
        android:layout_alignLeft="@+id/senha"
        android:layout_alignStart="@+id/senha"
        android:layout_alignRight="@+id/senha"
        android:layout_alignEnd="@+id/senha" />


</RelativeLayout>
